2004-04-15 nalin
	* configure.ac: default krb5-config and krb4-config to ':', add non
	library arguments output by --libs to LIBS
	* src/minikafs.c: add missing <stdio.h> include.
	* src/stash.c: fix compile for non-USE_KRB4 case.
	* src/v4.c: fix compile for non-USE_KRB4 case.
	* src/v5.c(v5_cc_retrieve_match): add.
	* src/v5.c(v5_creds_key_length): add.
	* src/v5.c(v5_creds_key_contents): add.

2004-03-23 nalin
	* configure.ac: remove kafs/krbafs checks.
	* src/Makefile.am: add EXTRA_PROGRAMS target for afs5log.
	* src/afs5log.c: add a test program for exercising minikafs.
	* src/minikafs.c, src/minikafs.h: add a less-portable but more-flexible
	krbafs implementation.
	* src/options.c(_pam_krb5_options_init): distinguish between v4 for
	general use and v4 because we're using AFS.

2004-03-16 nalin
	* src/pam_krb5_storetmp.c: remove the file if it's not a valid mkstemp
	pattern, even if we were passed a UID/GID.

2004-03-16 nalin
	* src/storetmp.c: drop privileges before we exec the helper.

2004-03-16 nalin
	* src/pam_krb5_storetmp.c: only attempt to change to the required
	UID/GID if we are not already running with that UID/GID, and only
	attempt to clear the supplemental groups list if uid == 0 (we're root).

2004-03-16 nalin
	* src/session.c: remove explict calls to chown(), which would be denied
	by SELinux in enforcing mode, instead expecting the helper to handle it
	all.
	* src/v5.c: remove explict calls to chown(), which would be denied by
	SELinux in enforcing mode, instead expecting the helper to handle it
	all.
	* src/v4.c: remove explict calls to chown(), which would be denied by
	SELinux in enforcing mode, instead expecting the helper to handle it
	all.
	* src/storetmp.c: pass the user's uid and gid to the helper, it already
	knows what to do.
	* src/tokens.c(tokens_useful): add.
	* src/session.c: when opening a session, create temporary tickets for
	grabbing tokens with the current permissions so that libkrb4 doesn't